--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    (h1) Bem vindo ao TCC</H1
+    (h2) Bem vindo ao TCC 2</H2
     Um código simples...
+    Uma linha nova 
 </body>
 </html>
